www/css/styles.css
html {
	height: 100%;
	width: 100%;
	margin: 0px;
	padding: 0px;
	overflow-x: hidden;
	background: #5cdbff; /* For browsers that do not support gradients */
	background: -webkit-radial-gradient(ellipse, #5cdbff, #5cdbff, #24B2eb); /* Safari 5.1 to 6.0 */
	background: -o-radial-gradient(ellipse, #5cdbff, #5cdbff, #24B2eb); /* For Opera 11.6 to 12.0 */
	background: -moz-radial-gradient(ellipse, #5cdbff, #5cdbff, #24B2eb); /* For Firefox 3.6 to 15 */
	background: radial-gradient(ellipse, #5cdbff, #5cdbff, #24B2eb); /* Standard syntax */
	background-repeat: no-repeat;
	background-attachment: fixed;
}

body {
	margin: 0px;
}

.toolbartable {
	position: top;
	attachment: fixed;
}

.version_number {
	color: #FFFFFF;
	text-align: center;
	position: absolute;
	top: 0;
	left: 50%;
	margin-right: -50%;
	transform: translate(-50%, 0);
}

.splash-links {
	position:absolute;
	bottom:0;
	margin-left: auto;
	margin-right: auto;
}

.splash-logo {
	display: block;
	position: absolute;
	top: 50%;
	left: 50%;
	margin-right: -50%;
	transform: translate(-50%, -50%);
}

a:link {
	color: white;
}

a:visited {
	color: white;
}

a.corporate-link {
	color: white;
	text-align: center;
}

a.terms-of-use {
	text-align: left;
}

a.privacy-policy {
	text-align: right;
}

table {
	width: 100%;
}

input {
	background: transparent;
	border: none;
	border-bottom: 1px solid #FFF;
	color: #FFF;
	overflow: hidden;
	text-overflow: ellipsis;
	margin-bottom: 5px;
}

input:focus {
	outline: none !important;
	border-bottom: 1px solid lime;
}

input::-webkit-input-placeholder, textarea::-webkit-input-placeholder { 
    color:    #DDD;
}
input:-moz-placeholder, textarea:-moz-placeholder { 
    color:    #DDD;
}
input::-moz-placeholder, textarea::-moz-placeholder { 
    color:    #DDD;
}
input:-ms-input-placeholder, textarea:-ms-input-placeholder { 
    color:    #DDD;
}

.saveregistration {
	float: right;
	padding: 3px;
	max-width: 32px;
	max-height: 32px;
}

.registerusername {
	width: 100%;
	margin-bottom: 10px;
	font-size: larger;
	font-weight: bold;
}

.registerpassword {
	width: 100%;
	margin-bottom: 10px;
	font-size: larger;
	font-weight: bold;
}

.registerconfirmpassword {
	width: 100%;
	margin-bottom: 10px;
	font-size: larger;
	font-weight: bold;
}

.registerpasswordhint {
	width: 100%;
	margin-bottom: 10px;
	font-size: larger;
	font-weight: bold;
}

.registeremail {
	width: 100%;
	margin-bottom: 10px;
	font-size: larger;
	font-weight: bold;
}

.changeregistrationusername {
	width: 100%;
	padding: 5px;
	margin-bottom: 10px;
	font-size: large;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}

.changeregistrationpassword {
	width: 100%;
	padding: 5px;
	margin-bottom: 10px;
	font-size: large;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}

.changeregistrationpasswordhint {
	width: 100%;
	padding: 5px;
	margin-bottom: 10px;
	font-size: large;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}

.changeregistrationemail {
	width: 100%;
	padding: 5px;
	margin-bottom: 10px;
	font-size: large;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}

.logo-footer {
	display: block;
	position: absolute;
	bottom:0;
	left: 50%;
	margin-right: -50%;
	transform: translate(-50%, -50%);
}

.search-key {
	width: 100%;
	padding: 5px;
	margin-bottom: 10px;
	font-size: larger;
	font-weight: bold;
	font-style: italic;
	color: #FFF;
}

.pagetitle {
	font-family: "Arial Black", Gadget, sans-serif;
	padding: 5px;
	float: left;
	color: #FFF;
	margin: 2px;
}

.content{
	width: 100%;
	font-family: "Arial Black", Gadget, sans-serif;
}

.resource-list-ul {
	padding: 0;
	overflow-y:scroll;
}

.resource-list-tpl-record {
	padding: 5px;
}

.resource-list-tpl-resourcename {
	width: 100%;
	font-weight: bold;
	font-size: larger;
	float: left;
	color: #FFF;
}

.resource-list-tpl-description {
	width: 100%;
	font-weight: bold;
	color: #FFF;
	-webkit-opacity: 1; /* disabled input on iOS webview */
/*	float: left; /* MAJOR PERFORMANCE ISSUE */*/
}

.table-view {
	min-height: 100%;
	padding: 0;
	overflow-y:scroll;
	-webkit-overflow-scrolling: touch;
}

.table-view-cell {
	display: block;
}

.resource_id {
	visibility: hidden;
}

.resource_resourcename {
	width: 100%;
	font-family: "Arial Black", Gadget, sans-serif;
	font-weight: bold;
	font-size: larger;
	padding: 5px;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}

.resource_username {
	width: 100%;
	font-family: "Arial Black", Gadget, sans-serif;
	font-size: large;
	padding: 5px;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}

.resource_password {
	width: 100%;
	font-family: "Arial Black", Gadget, sans-serif;
	font-size: large;
	padding: 5px;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}

.resource_description {
	background: transparent;
	width: 100%;
	border: none;
	border-bottom: 1px solid #FFF;
	font-family: "Arial Black", Gadget, sans-serif;
	font-size: large;
	color: #FFF;
	min-height: 100px;
	height: 100%;
	padding: 5px;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}

.resource_description:focus {
	outline: none !important;
	border-bottom: 1px solid lime;
}

.loginusername {
	width:100%;
	padding: 5px;
	font-size: large;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}

.loginrememberusernametable {
/*	width:100%;
	font-size:smaller;
*/}

.loginrememberusername {
	width:100%;
	padding:10px;
	font-size: smaller;
}

.login-tpl-rememberusernamelabel {
	font-family: "Arial Black", Gadget, sans-serif;
	font-size: smaller;
	color: #FFFFFF;
}

.loginpassword {
	width: 100%;
	padding: 5px;
	font-size: large;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}

.loginshowpasswordhint {
	padding: 10px;
	font-family: "Arial Black", Gadget, sans-serif;
	display: block;
	font-size: smaller;
	text-align: center;
}

.showhiddenpasswordicon {
	float: right;
	max-width: 32px;
	max-height: 32px;
	border: 1px solid #FFF;
}

.saveresource {
	float: right;
	padding: 3px;
	max-width: 32px;
	max-height: 32px;
}

.newresource {
	float: right;
	padding: 3px;
	max-width: 32px;
	max-height: 32px;
	cursor: pointer;
}

.menuicon {
	float: right;
	padding: 3px;
	max-width: 32px;
	max-height: 32px;
	cursor: pointer;
}

.deleteresource {
	float: right;
	padding: 3px;
	max-width: 32px;
	max-height: 32px;
}

/*Menu styling for drop-down functionality*/

/* The container <div> - needed to position the dropdown content */
.dropdown {
	float: right;
	position: relative;
	display: inline-block;
	z-index: 1;
}

/* Dropdown Content (Hidden by Default) */
.dropdown-content {
    display: none;
    position: absolute;
    right: 30px;
    background-color: #5cdbff;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
}

/* Links inside the dropdown */
.dropdown-content a {
    color: white;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
}

/* Change color of dropdown links on hover */
.dropdown-content a:hover {background-color: #f1f1f1}

/* For ADVANCED sub-menu */

.advanced-dropdown {
	float: right;
	position: relative;
	display: inline-block;
	z-index: 2;
}

/* container for advanced nested dropdown */
.advanced-dropdown-content {
	display: none;
	position: absolute;
	right: 30px;
	background-color: #5cdbff;
	min-width: 160px;
	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
}

/* Links inside the dropdown */
.advanced-dropdown-content a {
    color: white;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
}

/* Change color of dropdown links on hover */
.advanced-dropdown-content a:hover {background-color: #f1f1f1}

/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
.show {display:block;}

